<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.guill.formulario.MainActivity"
    >


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre" />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="setDate"
        android:text="@string/elegir_fecha"
        android:layout_below="@+id/layout_nombre"
        android:theme="@style/BotonRaised"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFechaElegida"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_telefono"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_email"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_boton"
        android:id="@+id/button"
        android:layout_below="@+id/layout_descr"
        android:onClick="irSegundaActividad"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:theme="@style/BotonRaised"
        />

    <TextView
        android:id="@+id/tv_texto_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnFecha"
        android:text="@string/tv_fecha_seleccionada"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/tvFechaElegida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_texto_fecha"
        android:textAppearance="?android:attr/textAppearanceMedium" />




</RelativeLayout>
